--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=LC_navTools
 version=1.0
 author=jim lee
 maintainer=navTools@leftcoast.biz
-sentence=Tools for marine navigation.
-paragraph=Working on some sort of marine navigation device? These may help.
+sentence=Tools I use for writing marine navigation code.
+paragraph=Working on some sort of marine navigation device? This is what I used.
 category=Data Processing
 url=https://github.com/leftCoast/LC_navTools
 architectures=*
